Update with custom isometric and add grommet for UI

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <script src="/melonJS-min.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -17,7 +16,9 @@
     <title>React App</title>
   </head>
   <body>
-    <canvas width="500" height="500" id="predict"></canvas>
+    <div class="builder">
+    <canvas width="1000" height="1000" id="predict"></canvas>
+    </div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
